--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-instantsearch-dom": "^6.1.0",
     "react-intl": "^3.9.3",
     "react-notifications": "^1.4.3",
+    "react-phone-number-input": "^3.1.8",
     "react-placeholder": "^3.0.2",
     "react-player": "^2.6.2",
     "react-redux": "^7.1.3",
