--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-instantsearch": "^6.1.0",
     "react-instantsearch-dom": "^6.1.0",
     "react-intl": "^3.9.3",
+    "react-jss": "^10.5.0",
     "react-notifications": "^1.4.3",
     "react-phone-number-input": "^3.1.8",
     "react-placeholder": "^3.0.2",
@@ -58,7 +59,8 @@
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "styled-components": "^5.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
